@@ -10,6 +10,7 @@ recent:
 		connections, implemented for iptables backend
 	add more stuff to the iptables skeleton
 	warning fixups
+	implement "local" and "forward" for iptables backend
 
 0.6:
 	disable negation of conjunctions ("or"s, aka brace-grouping) for now
@@ -47,4 +48,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.20 2002/07/18 14:04:12 matthew Exp $
+$Id: HISTORY,v 1.21 2002/07/18 21:00:00 matthew Exp $
